--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>todolist</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
   <div class="container">
     <h1>TODOLIST</h1>
-    <form>
-      <input type="input" class="input">
-      <button class="add">+</button>
+    <form id="input-wrapper">
+      <input id="input" type="input">
+      <button id="add">+</button>
     </form>
     <ul id="list" class="list">
-      <li>001</li>
     </ul>
   </div>
+
+  <script src="./script.js"></script>
 </body>
 </html>
